@@ -26,6 +26,10 @@ class CrudCommand extends CConsoleCommand
 	 * the default views will be used.
 	 */
 	public $templatePath;
+	/**
+	 * @var array list of actions to be created. Each action must be associated with a template file with the same name.
+	 */
+	public $actions=array('create','update','list','show','admin','_form');
 
 	public function getHelp()
 	{
@@ -145,7 +149,7 @@ EOD;
 			),
 		);
 
-		foreach(array('create','update','list','show','admin','_form') as $action)
+		foreach($this->actions as $action)
 		{
 			$list[$action.'.php']=array(
 				'source'=>$templatePath.'/'.$action.'.php',
