@@ -15,6 +15,7 @@ Version 1.0.8 To be released
 - New: Added thead and tbody to the code generated by crud command (Qiang)
 - New: Added CFormModel::init() and CActiveRecord::init() (Qiang)
 - New: Improved CFileHelper::getMimeType() so that it can return a meaningful result in most cases (Qiang)
+- New: Improved yiic shell commands so that they are easier to be extended (Qiang)
 - Chg: Modified the count() method of relational AR to support counting composite keys (Qiang)
 
 Version 1.0.7 July 5, 2009
